--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "wireframe-zapdos-pricing",
+    "category": "pricing",
     "version": "0.0.1",
     "description": "",
     "main": "src/index.js",
