unit gengar uikit

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Wireframe",
+  "name": "Gengar",
   "version": "1.0.0",
-  "description": "wireframe ui kit",
+  "description": "gengar ui kit",
   "main": "src/index.js"
 }
