--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
         "stylelint-selector-bem-pattern": "^2.0.0"
     },
     "dependencies": {
-        "wireframe-zapdos-careers": "https://github.com/webliumteam/blocks#w/zapdos/careers"
+        "wireframe-zapdos-careers": "https://github.com/webliumteam/blocks#w/zapdos/careers/prod"
     }
 }
