edit package json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Gengar",
+  "name": "Zapdos",
   "version": "1.0.0",
-  "description": "gengar ui kit",
+  "description": "zapdos ui kit",
   "main": "src/index.js"
 }
