edit package json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Gengar",
+  "name": "Clefable",
   "version": "1.0.0",
-  "description": "gengar ui kit",
+  "description": "clefable ui kit",
   "main": "src/index.js"
 }
