--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Gengar",
+  "name": "Deino",
   "version": "1.0.0",
-  "description": "gengar ui kit",
-  "main": "src/index.js"
+  "description": "deino ui kit",
+  "main": "src"
 }
