--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-    "name": "wireframe-zapdos-pricing",
-    "category": "pricing",
+    "name": "design-zapdos-pricing",
     "version": "0.0.1",
     "description": "",
     "main": "src/index.js",
@@ -29,5 +28,8 @@
         "stylelint": "^8.4.0",
         "stylelint-scss": "^2.2.0",
         "stylelint-selector-bem-pattern": "^2.0.0"
+    },
+    "dependencies": {
+        "wireframe-zapdos-pricing": "https://github.com/webliumteam/blocks#w/zapdos/pricing/prod"
     }
 }
