--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Gengar",
+  "name": "Snorlax",
   "version": "1.0.0",
-  "description": "gengar ui kit",
+  "description": "snorlax ui kit",
   "main": "src"
 }
