--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Hypno",
+  "name": "Metapod",
   "version": "1.0.0",
-  "description": "hypno ui kit",
+  "description": "metapod ui kit",
   "main": "src"
 }
