--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Mantyke",
+  "name": "Klink",
   "version": "1.0.0",
-  "description": "mantyke ui kit",
+  "description": "klink ui kit",
   "main": "src"
 }
