--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "stylelint-selector-bem-pattern": "^2.0.0"
     },
     "dependencies": {
+        "stylefmt": "^6.0.0",
         "wireframe-series-2-cta": "https://github.com/webliumteam/blocks#w/series-2/cta/prod"
     }
 }
