--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Metapod",
+  "name": "Jolteon",
   "version": "1.0.0",
-  "description": "metapod ui kit",
+  "description": "jolteon ui kit",
   "main": "src"
 }
